# MentalHealthAiAgent

./: Dockerfile  README.md  package-lock.json  package.json
backend/: .env  Dockerfile  app.py  chain.py  chains.py  chainstwo.py  functions.py  gmail.py  maintwo.py  mistralai.py  pyproject.toml  rag.py  requirements.txt  schemas.py  tool_executor.py
backend/Sources/: Fundamentals-of-Psychological-Disorders.html
docs/: README.md
src/: App.tsx  index.css  index.ts
src/components/: NFTGrid.tsx  Navbar.tsx  ProfilePage.tsx  UploadPage.tsx  VoiceSynthesizer.tsx
