[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for the makeup application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
python-dotenv = "^1.0.1"
black = "^25.1.0"
isort = "^6.0.1"
langchain = "^0.3.20"
langchain-openai = "^0.3.8"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"